@@ -55,6 +55,7 @@
       (assumed only one).
   * Ensure Gemini page sends both private and public SSH keys (#674)
   * Use the SA not the PA from pgch (#676)
+  * Restore missing valid_expiration method - could not set an expiration on a project (#677)
 
 == 1.8.1 ==
   * Modifications to KM tool and user to make sure EPPN's 
